@@ -1,3 +1,8 @@
+2019-04-17  Mike Gerow  <gerow@google.com>
+
+	* stdlib/tst-secure-getenv.c (choose_gid): Remove 64 supplemental
+	groups limit.
+
 2019-04-11  Florian Weimer  <fweimer@redhat.com>
 
 	* resolv/nss_dns/dns-network.c (getanswer_r): Do not replace root
